[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/ScoreboardListItem.gd" type="Script" id=1]
[ext_resource path="res://themes/medium_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://themes/panel_styleboxflat.tres" type="StyleBox" id=4]
[ext_resource path="res://shaders/panel_shader.tres" type="Material" id=5]
[ext_resource path="res://themes/x_large_font.tres" type="DynamicFont" id=6]

[node name="ScoreboardListItem" type="PanelContainer"]
material = ExtResource( 5 )
margin_right = 280.0
margin_bottom = 62.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_right = 280.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 263.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="TeamNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 160.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Team Name"
align = 1
valign = 1
autowrap = true
max_lines_visible = 4

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 170.0
margin_right = 248.0
margin_bottom = 64.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "100"
align = 1
valign = 1

[node name="ScoreChangeTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="gui_input" from="." to="." method="_on_ScoreboardListItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_ScoreboardListItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ScoreboardListItem_mouse_exited"]
[connection signal="gui_input" from="MarginContainer" to="." method="_on_MarginContainer_gui_input"]
[connection signal="timeout" from="ScoreChangeTimer" to="." method="_on_ScoreChangeTimer_timeout"]
